swp/src/page/food/index.scss
.food-card {
  background-color: #00003e !important;
  color: #fff !important;
  border-radius: 25px !important;
}

.food-img {
  border-radius: 25px !important;
}

.food-price {
  max-width: 10em !important;
  background-color: #29295d !important;
  color: #fff !important;
  padding: 0 !important;
  border-radius: 5px !important;
}
.title-food {
  font-weight: 700 !important;
  font-size: 25px !important;
}
.price-title1 {
  font-weight: bold !important;
  font-size: 20px !important;
}
.price-title2 {
  font-weight: bold !important;
  font-size: 15px !important;
}
.food-card-body {
  height: 15em !important;
}

.price-detail {
  background-color: #5f5f86;
  font-size: 15px !important;
  border-radius: 10px 10px 1px 1px;
}

@media (max-width: 767px) {
  .food-price {
    max-width: 5em !important;
  }

  .price-detail {
    font-size: 5px !important;
    border-radius: 10px 5px 0px 0px;
  }
}

